--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
-spring:
-  security:
-    oauth2:
-      client:
-        registration:
-          providerid:
-            authorization-grant-type: client_credentials
-            client-id: CtQF68Zjm3Sr_4wyUsKv
-            client-secret: yms1O5Ox5o7TBsKnPmXOpajKbbiEuKtq0UvJEgn8
-        provider:
-          providerid:
-            token-uri: https://api.avito.ru/token
-            user-info-authentication-method: header
+#spring:
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          avito:
+#            authorization-grant-type: jwt-bearer
+#            client-id: CtQF68Zjm3Sr_4wyUsKv
+#            client-secret: yms1O5Ox5o7TBsKnPmXOpajKbbiEuKtq0UvJEgn8
+#        provider:
+#          avito:
+#            token-uri: https://api.avito.ru/token
+#            user-info-authentication-method: header
