--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=producer
+spring.main.web-application-type=reactive
+debug=true
+user.id=12542761
 
 spring.security.oauth2.client.registration.avito.authorization-grant-type=client_credentials
 spring.security.oauth2.client.registration.avito.client-id=CtQF68Zjm3Sr_4wyUsKv
 spring.security.oauth2.client.registration.avito.client-secret=yms1O5Ox5o7TBsKnPmXOpajKbbiEuKtq0UvJEgn8
 
 spring.security.oauth2.client.provider.avito.token-uri=https://api.avito.ru/token
-
-spring.main.web-application-type=reactive
+spring.security.oauth2.client.provider.avito.authorization-uri=http://localhost:8085/oauth/authorize
+spring.security.oauth2.client.provider.avito.user-info-uri=http://localhost:8084/user
+spring.security.oauth2.client.provider.avito.user-name-attribute=name
 
 bot.name=MagTestBot
 bot.token=6965446601:AAHYUaTwV5V5xPT0dudkuiqv8eW0ncB0v7Q
